fix index txt/img overlap

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -39,7 +39,13 @@ body {
 .responsive-img {
     height: 350px;
     width: 350px;
-    padding: 20px;
+    float: left;
+    padding: 15px;
+}
+
+.col-md-8 {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .carousel {
@@ -84,7 +90,6 @@ body {
 /*Center-align to page*/
 .footer,
 .row,
-.row4,
 .contact-card,
 .jumbotron {
   margin-left: auto;
